examples/failing/AnonArgument.purs
-- @shouldFailWith IncorrectAnonymousArgument
module Main where

test :: Int -> Int
test = _
